# little_exif

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  annotated_exif_example.txt  clippy.toml  resources.md
.github/workflows/: rust.yml
additional-documentation/: annotated_jxl_example.txt  annotated_tiff_example.txt  resources.md  shrink_git_repo.md  small_annotated_exif_example.txt
debug/issue_02/: Cargo.toml
debug/issue_02/src/: main.rs
debug/issue_03/: Cargo.toml
debug/issue_03/src/: main.rs
debug/issue_06/src/: main.rs
debug/issue_09/: Cargo.toml  annotated_example.txt
debug/issue_09/src/: main.rs
debug/issue_10/: Cargo.toml  temp.txt
debug/issue_10/src/: main.rs
debug/issue_11/: Cargo.toml
debug/issue_11/src/: main.rs
debug/issue_12/: Cargo.toml
debug/issue_12/src/: main.rs
debug/issue_15/: Cargo.toml
debug/issue_15/src/: main.rs
debug/issue_17/: Cargo.toml
debug/issue_17/rsrc/: image1.tif
debug/issue_17/src/: main.rs
debug/issue_18/: Cargo.toml
debug/issue_18/src/: main.rs
debug/issue_19/src/: main.rs
debug/issue_20/: Cargo.toml
debug/issue_20/src/: main.rs
debug/issue_21/: Cargo.toml
debug/issue_21/src/: main.rs
debug/issue_24/: Cargo.toml
debug/issue_24/src/: main.rs
debug/issue_25/: Cargo.toml
debug/issue_25/src/: main.rs
debug/issue_27/: Cargo.toml
debug/issue_27/src/: main.rs
debug/issue_28/: Cargo.toml
debug/issue_28/src/: main.rs
debug/issue_31/: Cargo.toml
debug/issue_31/src/: main.rs
debug/issue_32/: Cargo.toml
debug/issue_32/src/: main.rs
debug/issue_34/: Cargo.toml
debug/issue_34/src/: main.rs
debug/issue_38/: Cargo.toml
debug/issue_38/src/: main.rs
debug/issue_43/: Cargo.toml
debug/issue_43/src/: main.rs
debug/issue_49/: Cargo.toml
debug/issue_49/src/: main.rs
debug/issue_52/src/: main.rs
debug/pull_62/: Cargo.toml
debug/pull_62/src/: main.rs
examples/: example1.rs  fuzz_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: metadata.rs  read_exif.rs
heif_conformance_tests/: Cargo.toml  download.sh
heif_conformance_tests/tests/: heif_main.rs
issue_tests/: Cargo.toml  notes.txt  resize.sh
issue_tests/resources/issue_000065/: 20160513-A0012+001.tiff
issue_tests/tests/: issue_000002.rs  issue_000003.rs  issue_000006.rs  issue_000012.rs  issue_000015.rs  issue_000018.rs  issue_000019.rs  issue_000020.rs  issue_000021.rs  issue_000025.rs  issue_000028.rs  issue_000031.rs  issue_000036.rs  issue_000038.rs  issue_000043.rs  issue_000049.rs  issue_000052.rs  issue_000054.rs  issue_000055.rs  issue_000059.rs  issue_000063.rs  issue_000064.rs  issue_000065.rs  issue_000066.rs  issue_000070.rs  issue_000074.rs  issue_000076.rs  issue_000085.rs  issue_000093.rs
src/: endian.rs  exif_tag.rs  exif_tag_format.rs  exif_tag_value.rs  filetype.rs  general_file_io.rs  jpg.rs  jxl.rs  lib.rs  metadata.rs  metadata_dec_version.rs  new_tag.rs  old_exif_tag.rs  old_metadata.rs  png.rs  png_chunk.rs  rational.rs  riff_chunk.rs  tiffdata.rs  u8conversion.rs  util.rs  webp.rs  xmp.rs
src/exif_tag/: decode.rs  mod.rs  set_value_to.rs
src/heif/: box_header.rs  box_type.rs  container.rs  iso_box.rs  mod.rs
src/heif/boxes/: iso.rs  item_info.rs  item_location.rs  item_reference.rs  meta.rs  mod.rs
src/ifd/: get.rs  mod.rs  set.rs  tag_trait.rs
src/metadata/: edit.rs  get.rs  iterator.rs  metadata_io.rs  mod.rs  set.rs
src/png/: chunk.rs  file.rs  mod.rs  png_chunk.rs  read.rs  text.rs  vec.rs
src/tiff/: file.rs  mod.rs  vec.rs
src/webp/: file.rs  mod.rs  riff_chunk.rs  vec.rs
tests/: iso_no_exif.jxl  issue_000002.rs  issue_000059.rs  issue_000063.rs  issue_000064.rs  issue_000065.rs  main.rs  no_exif.jxl  read_sample.avif  with_exif.jxl  write_sample.avif  write_sample_no_iref.avif
tests/resources/issue_000064/: a.jxl
