[package]
name = "little_exif"

version = "0.6.6"
edition = "2021"
rust-version = "1.65"

description = """
The only pure Rust crate with true read *and* write support for EXIF data, 
available for PNG, JP(E)G, JXL, TIFF, WebP images - and soon even more!
"""

authors = ["Tobias Prisching"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TechnikTobi/little_exif"
readme = "README.md"
keywords = ["metadata", "exif", "photo", "image"]
categories = ["multimedia::images"]

exclude = [
    ".DS_Store",
    "**/.DS_Store",
    ".gitignore",
    "additional-documentation/*",
    "tests/*",
    "debug/*",
    ".cargo_vcs_info.json",
]

[dependencies]
crc = "3.3.0"
paste = "1.0.15"
miniz_oxide = "0.8.8"
log = "0.4"
quick-xml = "0.37.5"

[[test]]
name = "tests"
path = "tests/main.rs"
