[package]
name = "little_exif"

version = "0.6.16"
edition = "2021"
rust-version = "1.65"

description = """
The only pure Rust crate with true read *and* write support for EXIF data, 
available for PNG, JP(E)G, HEIF/HEIC/HIF/AVIF, JXL, TIFF, WebP - and soon
even more!
"""

authors = ["Tobias Prisching"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TechnikTobi/little_exif"
readme = "README.md"
keywords = ["metadata", "exif", "photo", "image"]
categories = ["multimedia::images"]

exclude = [
    ".cargo_vcs_info.json",
    ".DS_Store",
    "**/.DS_Store",
    ".gitignore",
    ".vscode/*",
    "additional-documentation/*",
    "Cargo.lock",
    "debug/*",
    "examples/*",
    "issue_tests/*",
    "target/*",
    "tests/*",
    "vendor/*",
]

[dependencies]
crc = "3.3.0"
paste = "1.0.15"
miniz_oxide = "0.8.8"
log = "0.4"
quick-xml = "0.37.5"
brotli = "8.0.1"

[[test]]
name = "tests"
path = "tests/main.rs"

[workspace]
members = [".", "issue_tests"]
resolver = "3"