[package]
name = "little_exif"

version = "0.6.23"
edition = "2021"
rust-version = "1.65"

description = """
The only pure Rust crate with true read *and* write support for EXIF data, 
available for PNG, JP(E)G, HEIF/HEIC/HIF/AVIF, JXL, TIFF, WebP - and soon
even more!
"""

authors = ["Tobias Prisching"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TechnikTobi/little_exif"
readme = "README.md"
keywords = ["metadata", "exif", "photo", "image"]
categories = ["multimedia::images"]

exclude = [
    ".cargo_vcs_info.json",
    ".DS_Store",
    "**/.DS_Store",
    ".gitignore",
    ".vscode/*",
    "additional-documentation/*",
    "Cargo.lock",
    "debug/*",
    "fuzz/*",
    "examples/*",
    "issue_tests/*",
    "heif_conformance_tests/*",
    "target/*",
    "tests/*",
    "vendor/*",
]

[dependencies]
crc = "3.3.0"
paste = "1.0.15"
miniz_oxide = "0.8.8"
log = "0.4"
quick-xml = "0.37.5"
brotli = "8.0.1"

[[test]]
name = "tests"
path = "tests/main.rs"

# Used for fuzzer - fast iterations, with optimizations and debug info
[profile.release]
overflow-checks = true
debug = true
debug-assertions = true

[workspace]
members = [".", "issue_tests", "heif_conformance_tests", "fuzz"]
resolver = "3"

[lints.clippy]
modulo_one = "allow" # used in macros
from_over_into = "allow"
identity_op = "allow"
upper_case_acronyms = "allow" # IDAT etc. are uppercase by convention
collapsible_else_if = "allow"
new_without_default = "allow"
doc_lazy_continuation = "allow"
same_item_push = "allow"
needless_late_init = "allow"
empty_line_after_doc_comments = "allow"

unused_io_amount = "allow" # TODO
needless_range_loop = "allow" # TODO
match_same_arms = "allow" # TODO

# Clippy non-default rules
unwrap_used = "warn"
todo = "warn"
unreachable = "warn"


# Nice to have warnings
#match_wildcard_for_single_variants = "warn"
#unnecessary_wraps = "warn" # this can be fixed after fixing unwrap results
#expect_used = "warn" # This is should will require to change public API
#panic = "warn" # Needs some API changes
#wildcard_imports = "warn"
