[package]
name = "little_exif_issue_tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
little_exif = { path = ".." }
little_exif_0_3_1  = { git = "https://github.com/TechnikTobi/little_exif.git", package = "little_exif", tag = "v0.3.1" }
little_exif_0_6_2  = { git = "https://github.com/TechnikTobi/little_exif.git", package = "little_exif", tag = "v0.6.2" }
little_exif_0_6_3  = { git = "https://github.com/TechnikTobi/little_exif.git", package = "little_exif", tag = "v0.6.3" }
little_exif_0_6_5  = { git = "https://github.com/TechnikTobi/little_exif.git", package = "little_exif", tag = "v0.6.5" }
little_exif_0_6_12 = { git = "https://github.com/TechnikTobi/little_exif.git", package = "little_exif", tag = "v0.6.12" }